# albuswm

./: .gitignore  Cargo.toml
src/: cmd.rs  config.rs  config_handler.rs  groups.rs  keys.rs  layout.rs  lib.rs  main.rs  screen.rs  stack.rs  window_stack.rs  workspaces.rs  x.rs  xconn.rs
src/config/: config_file_handler.rs  key_parse.rs
src/layout/: cmaster.rs  floating_master.rs  mod.rs  stack.rs  tile.rs  tiled.rs
src/layouts/: center_master.rs
