[package]
name = "wm"
version = "0.1.0"
authors = ["crysco-byte <crysco-byte@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xcb = "0.9.0"
xcb-util = {version = "0.3.0", features = ["ewmh", "icccm", "keysyms"]}
