[package]
name = "albuswm"
version = "0.2.0"
edition = "2018"

[[bin]]
name = "albuswm"
doc = false

[dependencies]
fern = "0.5"
failure = "0.1"
libc = "0.2"
log = "0.4"
log-panics = { version = "2.0", features = ["with-backtrace"] }
time = "0.1"
x11 = "2.18"
xcb = "0.8"
xcb-util = { version = "0.2", features = ["ewmh", "icccm", "keysyms"] }
xdg = "2.2"
serde = {version = "1.0.117", features = ["derive"]}
toml = "0.5.8"
strum_macros = "0.21"
strum = "0.21"

